--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore $SOLUTION
     - name: Build
-      run: dotnet build --no-restore $SOLUTION
+      run: dotnet publish $SOLUTION --no-restore -o ./_site
     - name: Upload artifact
       # Automatically uploads an artifact from the './_site' directory by default
       uses: actions/upload-pages-artifact@v2
